<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <com.google.android.material.appbar.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:layout_scrollFlags="scroll|enterAlways|snap"
         android:fitsSystemWindows="true"
         android:id="@+id/barlayout">

        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_height="200dp"
             android:layout_width="match_parent"
             app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Display1"
             app:expandedTitleMarginTop="24dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:title="Selenoid"
             app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
             app:expandedTitleGravity="center">

            <com.google.android.material.appbar.MaterialToolbar
                 android:layout_height="?attr/actionBarSize"
                 android:layout_width="match_parent"
                 android:elevation="0dp"
                 app:layout_collapseMode="pin"
                 android:id="@+id/topAppBar" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_marginBottom="10dp"
         android:background="?attr/colorSurface"
         android:padding="16dp">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:divider="?android:attr/listDivider"
             android:dividerPadding="8dp"
             android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="25dp"
                 app:cardElevation="4dp"
                 app:cardBackgroundColor="?attr/colorPrimaryContainer"
                 app:cardCornerRadius="12dp"
                 android:id="@+id/ram_card">

                <LinearLayout
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:padding="16dp"
                     android:orientation="vertical">

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="18sp"
                         android:textColor="?attr/colorOnPrimaryContainer"
                         android:id="@+id/ram_usage_title"
                         android:text="RAM Usage"
                         android:textStyle="bold" />

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="14sp"
                         android:textColor="?attr/colorOnPrimaryContainer"
                         android:layout_marginTop="8dp"
                         android:id="@+id/ram"
                         android:text="Memory Available: 0MB / Memory Total: 0MB" />

                    <ProgressBar
                         android:layout_height="8dp"
                         android:layout_width="match_parent"
                         android:max="100"
                         android:backgroundTint="#191919"
                         android:progressTint="?attr/colorPrimary"
                         style="@android:style/Widget.ProgressBar.Horizontal"
                         android:layout_marginTop="8dp"
                         android:progress="0"
                         android:id="@+id/ram_progress" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="16dp"
                 app:cardElevation="4dp"
                 app:cardBackgroundColor="#1fdb74"
                 app:cardCornerRadius="12dp"
                 android:id="@+id/battery_card">

                <LinearLayout
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:padding="16dp"
                     android:orientation="vertical">

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="18sp"
                         android:textColor="?attr/colorOnPrimaryContainer"
                         android:id="@+id/battery_profile_title"
                         android:text="@string/battery_mode_title"
                         android:textStyle="bold" />

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="14sp"
                         android:textColor="?attr/colorOnPrimaryContainer"
                         android:layout_marginTop="8dp"
                         android:id="@+id/battery_desc"
                         android:text="@string/battery_mode_desc" />

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:text="Tap to Active" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="16dp"
                 app:cardElevation="4dp"
                 app:cardBackgroundColor="#e69927"
                 app:cardCornerRadius="12dp"
                 android:id="@+id/balance_card">

                <LinearLayout
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:padding="16dp"
                     android:orientation="vertical">

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="18sp"
                         android:textColor="?attr/colorOnPrimaryContainer"
                         android:id="@+id/balance_profile_title"
                         android:text="@string/balance_mode_title"
                         android:textStyle="bold" />

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="14sp"
                         android:textColor="?attr/colorOnPrimaryContainer"
                         android:layout_marginTop="8dp"
                         android:id="@+id/balance_desc"
                         android:text="@string/balance_mode_desc" />

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:text="Tap to Active" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="16dp"
                 app:cardElevation="4dp"
                 app:cardBackgroundColor="#e00b21"
                 app:cardCornerRadius="12dp"
                 android:id="@+id/gaming_card">

                <LinearLayout
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:padding="16dp"
                     android:orientation="vertical">

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="18sp"
                         android:textColor="?attr/colorOnPrimaryContainer"
                         android:id="@+id/gaming_profile_title"
                         android:text="@string/gaming_mode_title"
                         android:textStyle="bold" />

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="14sp"
                         android:textColor="?attr/colorOnPrimaryContainer"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="10dp"
                         android:id="@+id/gaming_desc"
                         android:text="@string/gaming_mode_desc" />

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:text="Tap to Active" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>